--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>SpringWebApp Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+
 	<properties>
 		<jdk.version>1.8</jdk.version>
 		<spring.version>4.2.1.RELEASE</spring.version>
@@ -19,6 +20,7 @@
 		<mysql.connector.version>5.1.31</mysql.connector.version>
 		<joda-time.version>2.3</joda-time.version>
 		<apachetiles.version>3.0.5</apachetiles.version>
+		<javax.validation.version>1.1.0.Final</javax.validation.version>
 	</properties>
 
 	<dependencies>
@@ -85,6 +87,13 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
+		</dependency>
+
+		<!-- jsr303 validation dependencies -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>${javax.validation.version}</version>
 		</dependency>
 
 		<!-- jstl -->
@@ -163,6 +172,33 @@
 			<version>${springsecurity.version}</version>
 		</dependency>
 
+		<!-- Apache Commons FileUpload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+
+		<!-- Apache Commons IO -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<finalName>SpringWebApp</finalName>
@@ -192,7 +228,7 @@
 				</configuration>
 			</plugin>
 
-			<!-- For Maven Tomcat Plugin  --> 
+			<!-- For Maven Tomcat Plugin -->
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
@@ -201,7 +237,6 @@
 					<path>/SpringWebApp</path>
 				</configuration>
 			</plugin>
-			
 
 		</plugins>
 	</build>
