--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,6 @@
 eclipse.preferences.version=1
+encoding//src/main/java=UTF-8
+encoding//src/main/resources=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/layout/menu.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/shipping-info.jsp=UTF-8
+encoding/<project>=UTF-8
