--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<joda-time.version>2.3</joda-time.version>
 		<apachetiles.version>3.0.5</apachetiles.version>
 		<javax.validation.version>1.1.0.Final</javax.validation.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
